# zotgtfs

./: Cargo.toml  README.md  arrivalestimates.json  compress.sh  config.json  for-developers.md  route-sup.json  schedule.json  segments_polyline_debug.csv
.github/workflows/: deploy.yaml
anteater_gtfs/: agencies.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
geojson/f-anteaterexpress/: f-anteaterexpress.geojson  log.txt
overrideshapes/: A.geojson  H.geojson  M.geojson
schedules/: A_Friday.csv  A_MonThurs.csv  E_Friday.csv  E_MonThurs.csv  H_Friday.csv  H_MonThurs.csv  M_Friday.csv  M_MonThurs.csv  N_Friday.csv  N_MonThurs.csv
src/: lib.rs  main.rs
src/static/: download.rs  process.rs  timeutil.rs
staticfiles/: agencies.json  routes copy.json  routes.json  segments copy.json  segments.json  stops copy.json  stops.json
