[package]
name = "zotgtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
color-eyre = "0.6.2"
csv = "1.3.0"
geo = "0.26.0"
geo-types = "0.7.11"
geojson = "0.24.1"
gtfs-rt = "0.3.0"
gtfs-structures = "0.39.0"
polyline = "0.10.1"
prost = "0.11.9"
protobuf = "3.3.0"
rand = "0.8.5"
redis = "0.23.3"
reqwest = {version = "0.11.22", features = ["brotli", "json"]}
rgb = "0.8.36"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.34.0", features = ["full"] }
vincenty-core = "1.0.0"

[[bin]]
name = "downloadstatic"
path = "src/static/download.rs"

[[bin]]
name = "processstatic"
path = "src/static/process.rs"
