[package]
name = "zotgtfs"
license = "AGPL-3.0"
version = "0.3.7"
edition = "2021"
description = "Conversion of Anteater Express data to GTFS Schedule and Realtime"

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.10.0"
color-eyre = "0.6.2"
csv = "1.3.0"
geo = "0.28.0"
geo-types = "0.7.11"
geojson = "0.24.1"
gtfs-realtime = "0.1.2"
gtfs-rt = "0.5.0"
gtfs-structures = "0.41.3"
polyline = "0.11.0"
prost = "0.13.3"
protobuf = "3.3.0"
rand = "0.8.5"
reqwest = {version = "0.12", features = ["brotli", "json"]}
rgb = "0.8.36"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
vincenty-core = "1.0.0"

[dev-dependencies]
tokio = {version = "1.40.0", features = ["full"] }

[lib]
name = "zotgtfs"
path = "src/lib.rs"
